# pumpspots

./: .gitignore  Cargo.toml  README.md  dock_spots.html  pump_tsueri_1  pumpspots.csv
FreeCAD_pump_models/: Pump_Tsueri_GW8.FCStd
python/: find_spots.py  make_map_pdf.py  pump_tsueri_2  pump_tsueri_3.py  pump_tsueri_4.py
src/: main.rs
